# learn-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  calculator.py  demo_auth.py  mcp-config.json  prompt_flow.py  pyproject.toml  sitemap_server.py  test_client.py
.claude/: settings.local.json
docs/: sitemap-server.md
tests/: conftest.py  test_calculator_core.py  test_sitemap_server.py
